enum ExpressionType
{
    LambdaExpression = 1;
    ValueExpression = 2;
    ParameterExpression = 3;
    OperatorExpression = 4;
    CollectionExpression = 5;
    ApplyExpression = 6;
}