import "NaplExpression.proto";
import "NaplTestValueType.proto";

message NaplTestValue
{
	required NaplTestValueType value_type = 1;
	optional bool boolean_value = 2;
	optional int32 integer_value = 3;
	optional double float_value = 4;
	optional string string_value = 5;
	optional NaplExpression expression_value = 6;
	repeated NaplTestValue sub_values = 7;
}
