enum NaplValueKind
{
	BooleanKind = 1;
	StringKind = 2;
	IntegerKind = 3;
	FloatKind = 4;
	TupleKind = 5;
	ListKind = 6;
	SetKind = 7;
	MapKind = 8;
	FunctionKind = 9;
}

message NaplType
{
	required NaplValueKind Kind = 1;
	repeated NaplType SubTypes = 2;
}